Fix blurry cover images issue.

--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -290,10 +290,9 @@ User Profile
 
 // user cover image
 .user-cover {
-  height: 350px;
+  height: 330px;
   overflow: hidden;
   position: relative;
-  margin-top: -20px;
 
   .cover-photo {
     background-size: cover;
